Overview of changes in lightdm 1.0.4

    * Fix --enable-gtk-greeter=yes not working
    * Fix X sessions with arguments in Exec not working
    * Use previous session for automatic login or if greeter does not request
      one.
    * Correct ownership of ~/.Xauthority if upgrading from buggy version of
      LightDM that had it root owned.

Overview of changes in lightdm 1.0.3

    * Fix reference counting issue in ConsoleKit code
    * Really add the lightdm-guest-session-wrapper

Overview of changes in lightdm 1.0.2

    * Fix daemon from blocking if Accounts Service does not exist
    * Fix greeter log file not being written
    * Don't set LANG environment variable if using Accounts Service.
    * Fix gdmflexiserver not working due to it not being in PATH
    * Don't authenticate the greeter user
    * Allow greeters to be disabled in configure flags
    * Fix over allocation of read buffer in greeter protocol
    * Make sure objects are cleaned up on exit
    * Fix minor memory leaks
    * Fix hugely oversized allocation in greeter buffer.  Can trigger
      crashes when entering very long passwords.

Overview of changes in lightdm 1.0.1

    * GTK greeter now remembers last user
    * GTK greeter now initializes i18n
    * Start authentication for automatically selected user in GTK greeter
    * Link liblightdm-qt against QtGui
    * Fix liblightdm-qt crashing when face images are installed
    * Set correct permissions on session log files
    * Prefer a locale with a codeset over one without for setting LANG 
    * Introduce a lightdm-guest-session-wrapper session command which MAC
      systems like AppArmor and SELinux can use for attaching a restrictive
      policy to guest sessions.
    * Provide an AppArmor profile for guest session lockdown.

Overview of changes in lightdm 1.0.0

    * Explicitly grab keyboard focus in GTK greeter
    * Fix removed power and a11y menu items in GTK greeter