@@ -6,6 +6,8 @@ Overview of changes in lightdm 1.0.4
       one.
     * Correct ownership of ~/.Xauthority if upgrading from buggy version of
       LightDM that had it root owned.
+    * Set default resolution of VNC to 1024x768, add settings for width, height,
+      depth into lightdm.conf.
 
 Overview of changes in lightdm 1.0.3
 
